--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <!--begin home_wrapper -->
   <section id="home_wrapper" class="home-wrapper">
     <!--begin gradient_overlay -->
-    <div class="gradient_overlay"></div>
+    <div class="gradient_overlay img-hor-vert"></div>
     <!--end gradient_overlay -->
 
     <!--begin container-->
@@ -181,22 +181,13 @@
       <!--begin row-->
 
       <div class="form-aside-text">
-        <div class="aside-text-content">
-          <h3>ENSINO MÉDIO + TÉCNICO
-            <br>
-            em Informática, Química ou Edificações
-          </h3>
-          <h3>Quem vem para o Colégio Oswaldo Cruz,
-            <br>
-            chega em todos os lugares!
-          </h3>
-          <h3>
-            O novo ensino médio com formação técnica
-            <br>
-            e profissional é associado ao programa
-            <br>
-            internacional PEA-UNESCO.
-          </h3>
+        <div class="aside-text-container">
+          <h1 class="dark-blue aside-text-content">
+            BOLSAS DE<br>
+            ATÉ 90% COM<br>
+            A SUA NOTA DO ENEM
+
+          </h1>
         </div>
         <div class="btn button-flex" onclick="gtag_report_conversionFOC()">
           <a href="https://www.oswaldocruz.br/www/view/colegio.asp" class="form-text-button">MATRICULE-SE AGORA</a>
@@ -341,69 +332,137 @@
   </section>
 
   <section class="section-dark-blue" style="position:relative">
+    <h1 class="text-center margin-bottom-100 white">CONHEÇA OS CURSOS SUPERIORES DE TECNOLOGIA<br>
+      DA FATEC OSWALDO CRUZ</h1>
     <div class="main">
       <ul class="cards">
         <li class="cards_item">
           <div class="card">
-            <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
+            <div class="card_image"><img src="/images/cosmeticos.png"></div>
             <div class="card_content">
-              <h2 class="card_title">Card Grid Layout</h2>
-              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-              <button class="btn card_btn">Read More</button>
+              <h2 class="card_title dark-blue underline-blue">COSMÉTICOS</h2>
+              <p class="card_text">Trabalhe no desenvolvimento, pesquisa, produção,
+                segurança e marketing na indústria cosmética ou seja um empreendedor.<br><br>
+                Apto a solicitar o registro no Conselho Regional
+                de Química (CRQ) e receber atribuições especiais.<br><br>
+                Duração: 5 semestres | Noturno
+              </p>
+            </div>
+            <div class="align-end">
+              <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=464" class="btn btn-blue-fluid"
+                onclick="gtag_report_conversion_farmacoeconomia()">
+                <h5 class="white">MATRICULE-SE</h5>
+              </a>
             </div>
           </div>
         </li>
         <li class="cards_item">
           <div class="card">
-            <div class="card_image"><img src="https://picsum.photos/500/300/?image=5"></div>
+            <div class="card_image"><img src="/images/alimentos-industrializados.png"></div>
             <div class="card_content">
-              <h2 class="card_title">Card Grid Layout</h2>
-              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-              <button class="btn card_btn">Read More</button>
+              <h2 class="card_title dark-blue underline-blue">ALIMENTOS<br>(INDUSTRIALIZADOS)</h2>
+              <p class="card_text">Seja responsável pelo desenvolvimento, produção,
+                segurança e qualidade de alimentos industrializados.<br><br>
+                Apto a solicitar o registro no Conselho Regional
+                de Química (CRQ) e receber atribuições especiais. <br><br>
+                Duração: 5 semestres | Noturno
+              </p>
+            </div>
+            <div class="align-end">
+              <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=464" class="btn btn-blue-fluid"
+                onclick="gtag_report_conversion_farmacoeconomia()">
+                <h5 class="white">MATRICULE-SE</h5>
+              </a>
             </div>
           </div>
         </li>
         <li class="cards_item">
           <div class="card">
-            <div class="card_image"><img src="https://picsum.photos/500/300/?image=11"></div>
+            <div class="card_image"><img src="/images/polimeros-plasticos.png"></div>
             <div class="card_content">
-              <h2 class="card_title">Card Grid Layout</h2>
-              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-              <button class="btn card_btn">Read More</button>
+              <h2 class="card_title dark-blue underline-blue">POLÍMEROS (PLÁSTICOS)</h2>
+              <p class="card_text">Atue na produção, transformação e emprego do material plástico de forma inovadora,
+                tecnológica e segura. Aprenda os conceitos ambientalmente corretos de lidar com os materiais plásticos
+                na vida moderna<br><br>
+                Apto a solicitar o registro no Conselho Regional
+                de Química (CRQ) e receber atribuições especiais.<br><br>
+                Duração: 5 semestres | Noturno
+              </p>
+            </div>
+            <div class="align-end">
+              <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=464" class="btn btn-blue-fluid"
+                onclick="gtag_report_conversion_farmacoeconomia()">
+                <h5 class="white">MATRICULE-SE</h5>
+              </a>
             </div>
           </div>
         </li>
+
         <li class="cards_item">
           <div class="card">
-            <div class="card_image"><img src="https://picsum.photos/500/300/?image=14"></div>
+            <div class="card_image"><img src="/images/gestao-ambiental.png"></div>
             <div class="card_content">
-              <h2 class="card_title">Card Grid Layout</h2>
-              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-              <button class="btn card_btn">Read More</button>
+              <h2 class="card_title dark-blue underline-blue">GESTÃO AMBIENTAL</h2>
+              <p class="card_text">Invista numa carreira de sucesso e de relevância no mercado de trabalho como Gestor
+                Ambiental e atue na indústria, nas empresas de saneamento, prefeituras, laboratórios, empresas de
+                consultorias, ONGs e órgãos governamentais. <br><br>
+                Apto a solicitar o registro no Conselho Regional
+                de Química (CRQ)e receber atribuições especiais.<br><br>
+                Duração: 5 semestres | Noturno
+              </p>
+            </div>
+            <div class="align-end">
+              <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=464" class="btn btn-blue-fluid"
+                onclick="gtag_report_conversion_farmacoeconomia()">
+                <h5 class="white">MATRICULE-SE</h5>
+              </a>
             </div>
           </div>
         </li>
+
         <li class="cards_item">
           <div class="card">
-            <div class="card_image"><img src="https://picsum.photos/500/300/?image=17"></div>
+            <div class="card_image"><img src="/images/analise-de-desenvolvimento.png"></div>
             <div class="card_content">
-              <h2 class="card_title">Card Grid Layout</h2>
-              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-              <button class="btn card_btn">Read More</button>
+              <h2 class="card_title dark-blue underline-blue">ANÁLISE DE DESENVOLVIMENTO DE SISTEMAS</h2>
+              <p class="card_text">Prepare-se para atuar como Analista de Sistemas, Desenvolvedor de Sistemas, Arquiteto
+                de Software, DBA, Gerente de Qualidade, Diretor de TI e muito mais.<br><br>
+                Duração: 5 semestres | Noturno
+              </p>
+            </div>
+            <div class="align-end">
+              <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=464" class="btn btn-blue-fluid"
+                onclick="gtag_report_conversion_farmacoeconomia()">
+                <h5 class="white">MATRICULE-SE</h5>
+              </a>
             </div>
           </div>
         </li>
+
         <li class="cards_item">
           <div class="card">
-            <div class="card_image"><img src="https://picsum.photos/500/300/?image=2"></div>
+            <div class="card_image"><img src="/images/gestao-de-rh.png"></div>
             <div class="card_content">
-              <h2 class="card_title">Card Grid Layout</h2>
-              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-              <button class="btn card_btn">Read More</button>
+              <h2 class="card_title dark-blue underline-blue">GESTÃO DE RECURSOS HUMANOS</h2>
+              <p class="card_text">Seja um profissional generalista de alto nível e atue em qualquer tipo de
+                organização, seja ela pública ou privada, de qualquer porte, praticando conceitos modernos de gestão de
+                pessoas. Aprenda a empregar novas tecnologias e visão estratégica.<br><br>
+                Duração: 4 semestres | Noturno
+              </p>
+            </div>
+            <div class="align-end">
+              <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=464" class="btn btn-blue-fluid"
+                onclick="gtag_report_conversion_farmacoeconomia()">
+                <h5 class="white">MATRICULE-SE</h5>
+              </a>
             </div>
           </div>
         </li>
       </ul>
+      <h1 class="text-center margin-bottom-100 margin-top-100 white">É veterano da FATEC Oswaldo Cruz?<br>
+        Temos uma novidade
+        <br>
+
     </div>
   </section>
 
@@ -414,25 +473,37 @@
       <div class="row mobile-reverse" style="position: relative;">
         <!--begin col-md-6-->
         <div class="col-md-6 margin-top-10 margin-bottom-30 section-align-center text-42" style="height: 560px;">
-          <h3 class="purple-title light-purple">
-            SÃO MAIS DE 42 CURSOS DE PÓS-GRADUAÇÃO
+          <h3 class="dark-blue" style="font-size: 42px;">
+            GANHE 10% DE DESCONTO EM SUA MENSALIDADE!
           </h3>
-          <p class="light-purple semi-bold">Acesse o nosso site e saiba mais sobre as pós-graduações que irão te
-            posicionar no mercado
-            como referência no assunto.</p>
-          <br>
-          <p class="light-purple semi-bold">Conheça a proposta do curso, grade curricular, data
-            de inicio das aulas, modalidade de ensino, opções
-            de parcelamento do investimento e corpo docente.
-            Estamos te esperando!</p>
-          <a href="https://www.oswaldocruz.br/pos/" class="btn btn-small-super-orange margin-top-10" onclick="">
-            <p class="white">CONHECER PÓS OSWALDO CRUZ</p>
-          </a>
+
+          <p class="dark-blue semi-bold">Ao indicar um amigo para estudar em um dos cursos
+            da Faculdade de Tecnologia Oswaldo Cruz você garante 10% de desconto.
+          </p>
+
+          <p class="dark-blue semi-bold">
+            <b style="font-size: 22px;">PASSO A PASSO</b><br>
+            1. Apresente os cursos tecnólogos para algum amigo ou parente.
+          </p>
+
+          <p class="dark-blue semi-bold">2. No momento da matrícula, o aluno calouro deverá informar o nome, curso e
+            dados do aluno veterano que o indicou.</p>
+
+          <p class="dark-blue semi-bold">3. O aluno veterano terá direito a 10% de desconto nas mensalidades durante um
+            período de 12 meses, que será iniciado após o pagamento da primeira mensalidade do aluno calouro</p>
+
+          <p class="dark-blue semi-bold"><b>NÃO PERCA MAIS TEMPO,</b> envie esse link para algum amigo e garanta o
+            desconto na
+            sua mensalidade!
+          </p>
+
+          <p class="dark-blue semi-bold" style="font-size: 14px;">*O período de desconto se refere ao curso que o
+            veterano está cursando no momento da matrícula</p>
         </div>
         <!--end col-sm-6-->
         <!--begin col-md-6-->
         <div class="col-md-6 complement-image">
-          <img src="./images/42-CURSOS.png" class="width-100 img-mb-30 responsive-42" alt="imac" />
+          <img src="./images/desconto-10.png" class="width-100 img-mb-30 responsive-42 margin-left-100" alt="imac" />
         </div>
         <!--end col-sm-6-->
       </div>
@@ -440,15 +511,6 @@
     </div>
     <!--end container-->
   </section>
-
-  <section class="section-light-purple" style="position:relative">
-    <div class="container">
-      <div class="text-center">
-        <h2 class="white">QUEM VEM PARA A FOC, CHEGA EM TODOS OS LUGARES!</h2>
-      </div>
-    </div>
-  </section>
-
 
   <section class="section-dark-blue-gradient" style="position:relative">
     <div class="container">
