--- a/index.html
+++ b/index.html
@@ -204,19 +204,16 @@
         <!--begin contact form -->
         <form id="contact-form" class="contact" action="processar_cadastro.php" method="post">
 
-          <div class="col-md-12">
-            <div class="form-field">
-              <label for="responsibleName">Nome do Responsável:</label>
-              <input class="contact-input gray-input" required="" name="responsibleName" placeholder="Ex: Flávia"
-                id="responsibleName" type="name">
+          <div class="col-md-12 container-two-input">
+            <div class="form-medium-field">
+              <label for="name">Nome:</label>
+              <input class="contact-input gray-input" required="" name="name" placeholder="Ex: Flávia" id="name"
+                type="text">
             </div>
-          </div>
-
-          <div class="col-md-12">
-            <div class="form-field">
-              <label for="studentName">Nome do Aluno:</label>
-              <input class="contact-input gray-input" required="" name="studentName" placeholder="Ex: Daniel"
-                id="studentName" type="name">
+            <div class="form-medium-field">
+              <label for="surname">Sobrenome:</label>
+              <input class="contact-input gray-input" required="" name="surname" placeholder="Ex: Farias" id="surname"
+                type="text">
             </div>
           </div>
 
