--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <!--begin col-md-6-->
           <div class="col-md-12">
             <div class="form-field">
-              <label for="curso">Curso:</label>
+              <label for="curso">Curso de interesse:</label>
               <input class="contact-input gray-input" required="" name="course" placeholder="Curso de interesse"
                 id="course" type="text">
             </div>
@@ -243,12 +243,10 @@
           <!--end col-md-6-->
 
           <!--begin col-md-12-->
-          <div class="col-md-12 button-flex" onclick="gtag_report_conversionForm()">
-            <input value="RESERVAR BOLSA DE ESTUDOS" id="submit-button" class="contact-submit" type="submit">
+          <div class="col-md-12 button-flex" onclick="">
+            <input value="QUERO SER ATENDIDO" id="submit-button" class="contact-submit" type="submit">
           </div>
           <!--end col-md-12-->
-
-          <p class="dark-blue">*Bolsa de estudos reservada por até 72 horas.</p>
         </form>
 
         <!--end contact form -->
